# Shell_cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  Shell_cpp  Shell_cpp_proj.cbp  cmake_install.cmake  copy.cpp  ls.cpp  ls.h  ls_cpp  main.cpp  main_ls.cpp  main_mkdir.cpp  main_mygrep.cpp  main_rm.cpp  mkdir.cpp  mkdir.h  mkdir_cpp  mygrep.cpp  mygrep.h  mygrep_cpp  rm.cpp  rm.h  Питання
execs/: Shell_cpp  ls.cpp  ls_cpp  mkdir_cpp  rm_cpp
